syntax = "proto3";

package dashboard;

service Dashboard {
  rpc GetGreeting(GetGreetingRequest) returns (GetGreetingResponse);
}

message Greeting {
  string id = 1;
  string message = 2;
}


message GetGreetingRequest {

}

message GetGreetingResponse {
  Greeting greeting = 1;
}
